--- a/src/App.css
+++ b/src/App.css
@@ -567,6 +567,7 @@
   .create-list-input {
     min-width: auto;
     width: 100%;
+    font-size: 16px; /* Prevent zoom on iOS Safari */
   }
 
   .lists {
@@ -581,6 +582,10 @@
   .add-item {
     flex-direction: column;
     gap: 1rem;
+  }
+
+  .add-item-input {
+    font-size: 16px; /* Prevent zoom on iOS Safari */
   }
 
   .todo-item {
@@ -604,6 +609,10 @@
   .todo-edit {
     flex-direction: column;
     gap: 1rem;
+  }
+
+  .todo-edit-input {
+    font-size: 16px; /* Prevent zoom on iOS Safari */
   }
 
   .todo-edit-actions {
